<resources>
    <string name="app_name">Déploiement Vélib\'</string>
    <string name="title_activity_maps">Déploiement Vélib\'</string>
    <string name="global_statistics">Statistiques globales</string>
    <string name="station_statistics">Statistiques d\'une station</string>
    <string name="settings">Paramètres</string>
    <string name="title_activity_global_statistics">GlobalStatistics</string>
    <string name="map">Carte</string>
    <string name="title_activity_station_statistics">StationStatistics</string>
    <string name="week_opening">Ouvertures de la semaine :</string>
    <string name="help">Aide</string>
    <string name="more_infos">Plus d\'informations</string>
    <string name="electrified">Signaler comme électrifiée</string>
    <string name="non_electrified">Signaler comme non-électrifiée</string>
    <string name="per_week_opening">Ouvertures par semaine :</string>
    <string name="text_green">Vert : Mouvement il y a moins d\'une heure</string>
    <string name="text_yellow">Jaune : Mouvement il y a moins de trois heures</string>
    <string name="text_orange">Orange : Mouvement il y a moins de 12 heures</string>
    <string name="text_red">Rouge : Mouvement il y a moins de 24 heures</string>
    <string name="text_blue">Bleu : Pas de mouvement depuis 24 heures</string>
    <string name="text_purple">Violet : Station fermée ou supprimée</string>
    <string name="text_rose">Rose : Station en travaux</string>
    <string name="text_cyan">Cyan : En travaux, mais contient des bornes disponibles</string>
    <string name="text_grey">Gris : Officiellement ouverte mais n\'a pas de borne disponible</string>
    <string name="text_transparent">Un peu transparent : non alimentée</string>
    <string name="text_dot">Point sur le marqueur : Park+ activé</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="working_stations">Stations en travaux</string>
    <string name="display_working_stations">Afficher les stations en travaux</string>
    <string name="closed_stations">Stations fermées</string>
    <string name="display_closed_stations">Afficher les stations fermées</string>
    <string name="almost_working_stations">Stations ouvertes sans bornes</string>
    <string name="display_almost_working_stations">Afficher les stations officiellement ouvertes mais sans borne disponible</string>
    <string name="last_movement">Afficher les stations affichant un mouvement depuis</string>
    <string name="electrified_stations">Stations électrifiées</string>
    <string name="display_electrified_stations">N\'afficher que les stations alimentées</string>
    <string name="unknown_stations">Stations pas encore en travaux</string>
    <string name="display_unknown_stations">Afficher sur la carte les anciennes stations dont les travaux n\'ont pas officiellement commencé</string>
    <string name="deleted_stations">Stations supprimées</string>
    <string name="display_deleted_stations">Afficher les stations supprimées</string>
    <string name="title_activity_avancement">Avancement</string>
    <string name="avancement">Avancement</string>
    <string name="twitter">Twitter @VelibDeployment</string>
    <string name="remove_ads">Retirer les pubs</string>
    <string name="station">Station</string>
</resources>
