<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="working_stations"
        android:summary="@string/display_working_stations"
        android:title="@string/working_stations" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="unknown_stations"
        android:summary="@string/display_unknown_stations"
        android:title="@string/unknown_stations" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="almost_working_stations"
        android:summary="@string/display_almost_working_stations"
        android:title="@string/almost_working_stations" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="closed_stations"
        android:summary="@string/display_closed_stations"
        android:title="@string/closed_stations" />

    <ListPreference
        android:defaultValue="42"
        android:entries="@array/last_movement_time"
        android:entryValues="@array/last_movement_time_values"
        android:key="last_movement"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/last_movement" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="electrified_stations"
        android:summary="@string/display_electrified_stations"
        android:title="@string/electrified_stations" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="deleted_stations"
        android:summary="@string/display_deleted_stations"
        android:title="@string/deleted_stations" />

</PreferenceScreen>
